tests/miniJava/pos/000904_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( 0 . length ) { } else java [ 0 ] = 0 ; } }
