tests/miniJava/neg/003486_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java void [ 0 ] = 0 ; } }
